--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "@vue/compiler-sfc": "^3.0.5",
     "babel-loader": "^8.2.2",
     "vite": "^2.2.3",
-    "vue-loader": "^16.2.0"
+    "vue-loader": "^16.2.0",
     "autoprefixer": "^10.2.6",
     "postcss": "^8.3.0",
-    "tailwindcss": "^2.1.2",
+    "tailwindcss": "^2.1.2"
   }
 }
