--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "vue": "^3.0.5"
+    "vue": "^3.0.5",
+    "vue-router": "^4.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
