--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "dotenv": "^10.0.0",
     "firebase": "^8.6.5",
     "vue": "^3.0.5",
     "vue-router": "^4.0.8"
