--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "browserify": "^17.0.0",
     "dotenv-webpack": "^1.7.0",
     "firebase": "^8.6.5",
+    "sweetalert2": "^11.0.18",
     "vue": "^3.0.5",
     "vue-router": "^4.0.8"
   },
