--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@vue-stripe/vue-stripe": "^4.2.5",
     "axios": "^0.21.1",
     "browserify": "^17.0.0",
     "dotenv-webpack": "^1.7.0",
