--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "browserify": "^17.0.0",
     "dotenv-webpack": "^1.7.0",
     "firebase": "^8.6.5",
-    "stripe": "^8.160.0",
     "pinia": "^2.0.0-beta.3",
+    "stripe": "^8.160.0",
     "sweetalert2": "^11.0.18",
     "vue": "^3.0.5",
     "vue-router": "^4.0.8"
@@ -31,6 +31,7 @@
     "autoprefixer": "^10.2.6",
     "babel-loader": "^8.2.2",
     "postcss": "^8.3.0",
+    "sass": "^1.42.1",
     "tailwindcss": "^2.2.4",
     "vite": "^2.2.3",
     "vue-loader": "^16.2.0"
