--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
+    "host": "vite --host",
     "build": "vite build",
     "serve": "vite preview",
     "storybook": "start-storybook -p 6006",
